# xo-game-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  app.cpp  xo_board.cpp
include/sdl_xo_game/: board.hpp  discriminate.hpp  game.hpp  sequence.hpp  xo_board.hpp
include/utils/: iota.hpp  mapped.hpp  sequence.hpp  transformed.hpp  unique.hpp  variant.hpp
src/: CMakeLists.txt  xo_board.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  discriminate.cpp  xo_board.cpp
tests/unit/sdl_xo_game/: xo_board.cpp
tests/unit/utils/: iota.cpp  mapped.cpp  transformed.cpp  unique.cpp  variant.cpp
